--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="black">#000000</color>
+    <color name="wight">#ffffff</color>
+
     <color name="splash_bg">#D3B548</color>
     <color name="splash_bg2">#B6DA53</color>
     <color name="splash_bg3">#dd489cfa</color>
 
+    <color name="register_btn_bg">#EAEBED</color>
     <color name="base_actionbar_bg">#f5f5f5</color>
     <color name="base_action_bar_title_color">#2f2725</color>
     <color name="base_tab_indicator_text_color">#f82c22</color>
@@ -13,6 +17,8 @@
     <color name="base_color_text_black">#3e3e39</color>
     <color name="base_color_text_gray2">#ffa1a1a1</color>
     <color name="base_color_text_gray">#9fa0a0</color>
+    <color name="color_text_orange">#F28C48</color>
+    <color name="color_text_gray">#848484</color>
 
     <color name="base_color_text_white">#ffffff</color>
     <color name="home_item_color_bg">#f4f6f6</color>
