--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <dimen name="base_action_bar_height">48.0dip</dimen>
     <dimen name="base_action_bar_title_size">22.0sp</dimen>
     <dimen name="register_margin">10.0dp</dimen>
+    <dimen name="register_margin_rl">25.0dp</dimen>
+    <dimen name="register_view_margin">25.0dp</dimen>
+    <dimen name="register_edit_margin">15.0dp</dimen>
     <dimen name="chat_add_btn_margin">20.0dp</dimen>
     <dimen name="base_scrollview_top_height">50.0dip</dimen>
     <dimen name="tab_padding_top_bottom">15dp</dimen>
