--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -137,8 +137,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/base_action_bar_height</item>
         <item name="android:layout_marginTop">@dimen/register_margin</item>
-        <item name="android:layout_marginLeft">@dimen/register_margin</item>
-        <item name="android:layout_marginRight">@dimen/register_margin</item>
+        <item name="android:layout_marginLeft">@dimen/register_margin_rl</item>
+        <item name="android:layout_marginRight">@dimen/register_margin_rl</item>
     </style>
 
     <style name="Register_Edit">
