--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,6 +14,7 @@
         android:id="@+id/register_account_hint_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/base_color_text_black"
         android:textSize="40sp"
         android:layout_marginLeft="@dimen/register_margin_rl"
         android:layout_marginTop="@dimen/register_margin_rl"
