--- a/app/src/main/res/layout/activity_register_inphone.xml
+++ b/app/src/main/res/layout/activity_register_inphone.xml
@@ -14,6 +14,7 @@
         android:id="@+id/register_hint_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/base_color_text_black"
         android:textSize="40sp"
         android:layout_marginLeft="@dimen/register_margin_rl"
         android:layout_marginTop="@dimen/register_margin_rl"
@@ -30,10 +31,10 @@
     <LinearLayout style="@style/Register_Input" >
 
         <TextView
-            android:layout_width="95dp"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
             android:textColor="@color/color_text_gray"
-            android:textSize="18sp"
+            android:textSize="17sp"
             android:gravity="center_vertical|right"
             android:paddingLeft="10dp"
             android:text="国家/地区" />
@@ -59,7 +60,7 @@
     <LinearLayout style="@style/Register_Input" >
 
         <TextView
-            android:layout_width="95dp"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
             android:textColor="@color/color_text_gray"
             android:textSize="18sp"
@@ -91,7 +92,7 @@
         android:id="@+id/register_messge">
 
         <TextView
-            android:layout_width="95dp"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
             android:textColor="@color/color_text_gray"
             android:textSize="18sp"
@@ -132,7 +133,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/color_text_gray"
             android:textSize="15sp"
-            android:text="我们已给" />
+            android:text="已给" />
 
 
         <TextView
@@ -141,14 +142,14 @@
             android:layout_height="wrap_content"
             android:textColor="@color/color_text_orange"
             android:textSize="15sp"
-            android:text="+86 12345678910" />
+            android:text="12345678910" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_text_gray"
             android:textSize="15sp"
-            android:text="发送了一个6位数验证码" />
+            android:text="发送了6位的验证码" />
     </LinearLayout>
 
     <Button
