chat_activity_UI
improve the UI of activity chat, login, register

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -23,7 +23,8 @@
             android:fadingEdgeLength="0dp"
             android:fastScrollEnabled="true"
             android:listSelector="@color/transparent"
-            android:paddingBottom="10dp"
+            android:paddingBottom="15dp"
+            android:clipToPadding="false"
             android:transcriptMode="alwaysScroll" />
 
         <RelativeLayout
