--- a/app/src/main/res/layout/activity_set_updateinfo.xml
+++ b/app/src/main/res/layout/activity_set_updateinfo.xml
@@ -19,6 +19,7 @@
         android:orientation="horizontal" >
 
         <TextView
+            android:id="@+id/update_information"
             style="@style/Smile.TextView._Black"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -28,7 +29,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/edit_nick"
+            android:id="@+id/edit_update_information"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1.0"
