--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,6 +78,26 @@
             android:textSize="@dimen/text_size_large" />
 
 
+    <TextView
+        android:id="@+id/btn_login_by_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="手机验证登录"
+        android:textColor="@color/color_theme"
+        android:layout_below="@+id/btn_login"
+        android:layout_alignLeft="@+id/btn_login"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/btn_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="新用户注册"
+        android:textColor="@color/color_theme"
+        android:layout_below="@+id/btn_login"
+        android:layout_alignRight="@+id/btn_login"
+        android:textSize="15sp" />
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="48dp"
@@ -90,17 +110,16 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:gravity="center_vertical"
-            android:text="@string/register_txt1"
+            android:text="登录即代表同意"
             android:textColor="#ffffffff"
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_marginLeft="5dp"
             android:gravity="center_vertical"
-            android:text="@string/register_txt2"
+            android:text="服务条款"
             android:textColor="@color/color_theme"
             android:textSize="15sp" />
     </LinearLayout>
