--- a/app/src/main/res/layout/activity_set_info.xml
+++ b/app/src/main/res/layout/activity_set_info.xml
@@ -58,6 +58,87 @@
             android:background="@color/base_color_text_gray" />
 
         <RelativeLayout
+            android:id="@+id/layout_account"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:padding="10dp" >
+
+            <TextView
+                style="@style/Smile.TextView._Black"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:text="@string/add_name" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tv_set_name"
+                    style="@style/Smile.TextView._Black"
+                    android:drawablePadding="10dp" />
+
+                <ImageView
+                    android:id="@+id/iv_account_arrow"
+                    style="@style/Smile.ImageView"
+                    android:layout_width="20dp"
+                    android:src="@drawable/register_bottom_arrow" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="@color/base_color_text_gray" />
+
+
+        <RelativeLayout
+            android:id="@+id/layout_gender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:padding="10dp" >
+
+            <TextView
+                style="@style/Smile.TextView._Black"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:text="@string/add_gender" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tv_set_gender"
+                    style="@style/Smile.TextView._Black"
+                    android:drawablePadding="10dp" />
+
+                <ImageView
+                    android:id="@+id/iv_gender_arrow"
+                    style="@style/Smile.ImageView"
+                    android:layout_width="20dp"
+                    android:src="@drawable/register_bottom_arrow" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="@color/base_color_text_gray" />
+
+        <RelativeLayout
             android:id="@+id/layout_nick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -171,68 +252,6 @@
             </LinearLayout>
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="@color/base_color_text_gray" />
-
-
-        <RelativeLayout
-            android:id="@+id/layout_gender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            android:padding="10dp" >
-
-            <TextView
-                style="@style/Smile.TextView._Black"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:text="@string/add_gender" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/tv_set_gender"
-                    style="@style/Smile.TextView._Black"
-                    android:layout_marginRight="20dp"
-                    android:drawablePadding="10dp" />
-
-            </LinearLayout>
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="@color/base_color_text_gray" />
-
-        <RelativeLayout
-            android:id="@+id/layout_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            android:padding="10dp" >
-
-            <TextView
-                style="@style/Smile.TextView._Black"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:text="@string/add_name" />
-
-            <TextView
-                android:id="@+id/tv_set_name"
-                style="@style/Smile.TextView._Black"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="20dp"
-                android:drawablePadding="10dp" />
-        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
