--- a/app/src/main/res/layout/pop_showavator.xml
+++ b/app/src/main/res/layout/pop_showavator.xml
@@ -1,53 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pop_showavator_background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#88000000" >
+    android:layout_height="wrap_content"
+    android:background="#00000000" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/pop_bg"
+        android:background="@color/gray_background"
         android:orientation="vertical" >
 
-        <RelativeLayout
-            android:id="@+id/layout_photo"
+        <LinearLayout
+            android:id="@+id/layout_choose_first"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:clickable="true" >
-
+            android:background="@color/wight"
+            android:gravity="center">
             <TextView
-                style="@style/Smile.TextView._Black"
-                android:layout_centerInParent="true"
-                android:layout_margin="10dp"
-                android:drawablePadding="20dp"
+                android:id="@+id/tv_choose_first"
+                style="@style/Smile"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:layout_margin="13dp"
                 android:gravity="center"
-                android:text="@string/pop_photo" />
-        </RelativeLayout>
+                android:text="@string/pop_choose" />
+        </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="0.5dp"
             android:background="@drawable/base_horizontal_line" >
         </View>
 
-        <RelativeLayout
-            android:id="@+id/layout_choose"
+        <LinearLayout
+            android:id="@+id/layout_choose_second"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:clickable="true" >
-
+            android:background="@color/wight"
+            android:gravity="center">
             <TextView
-                style="@style/Smile.TextView._Black"
-                android:layout_centerInParent="true"
-                android:layout_margin="10dp"
-                android:drawablePadding="20dp"
+                android:id="@+id/tv_choose_second"
+                style="@style/Smile"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:layout_margin="13dp"
                 android:gravity="center"
-                android:text="@string/pop_choose" />
-        </RelativeLayout>
+                android:text="@string/pop_photo" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_reset_avatar_exit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:background="@color/wight"
+            android:gravity="center">
+            <TextView
+                style="@style/Smile"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:layout_margin="13dp"
+                android:gravity="center"
+                android:text="取消" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
