--- a/app/src/main/res/layout/include_chat_bottom_bar.xml
+++ b/app/src/main/res/layout/include_chat_bottom_bar.xml
@@ -80,6 +80,16 @@
             android:text="@string/longclick_speak" >
         </Button>
 
+
+        <Button
+            android:id="@+id/btn_speak_recognizer"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/skin_aio_panel_ptt_nor"
+            android:gravity="center"
+            android:textColor="@color/base_color_text_black" >
+        </Button>
+
         <Button
             android:id="@+id/btn_chat_voice"
             android:layout_width="35dp"
@@ -90,7 +100,8 @@
             android:gravity="center"
             android:textColor="@color/base_color_text_black" >
         </Button>
-        
+
+
         <Button
             android:id="@+id/btn_chat_keyboard"
             android:layout_width="35dp"
@@ -102,7 +113,7 @@
             android:gravity="center"
             android:textColor="@color/base_color_text_black" >
         </Button>
-        
+
         <Button
             android:id="@+id/btn_chat_send"
             android:layout_width="50dp"
