--- a/app/src/main/res/layout/activity_near_people.xml
+++ b/app/src/main/res/layout/activity_near_people.xml
@@ -9,11 +9,135 @@
         android:id="@+id/common_actionbar"
         layout="@layout/include_action_bar" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@color/wight"
+        android:layout_height="50dp">
+
+        <LinearLayout
+            android:layout_weight="1.0"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="距离:"
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/near_distance"
+                android:textSize="18sp"
+                android:text="10"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:layout_marginLeft="2dp"
+                android:background="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/near_line_uad_margin"
+            android:layout_marginBottom="@dimen/near_line_uad_margin"
+            android:background="@color/base_color_text_gray2" />
+
+        <LinearLayout
+            android:layout_weight="1.0"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="性别:"
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/near_gender"
+                android:textSize="18sp"
+                android:text="男◢"
+                android:maxLines="1"
+                android:layout_marginLeft="2dp"
+                android:background="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/near_line_uad_margin"
+            android:layout_marginBottom="@dimen/near_line_uad_margin"
+            android:background="@color/base_color_text_gray2" />
+
+        <LinearLayout
+            android:layout_weight="1.0"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="数量:"
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/near_count"
+                android:textSize="18sp"
+                android:text="10"
+                android:inputType="number"
+                android:maxLines="1"
+                android:layout_marginLeft="2dp"
+                android:background="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/near_line_uad_margin"
+            android:layout_marginBottom="@dimen/near_line_uad_margin"
+            android:background="@color/base_color_text_gray2" />
+
+        <LinearLayout
+            android:layout_weight="1.0"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/near_include_friends"
+                android:text="包含好友◢"
+                android:textSize="18sp"
+                android:maxLines="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/base_color_text_gray2" />
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0.0dip"
         android:layout_weight="1.0"
-        android:background="@color/msg_chat_bg" >
+        android:background="@color/wight" >
 
         <com.example.lenovo.uu.view.xlist.XListView
             android:id="@+id/list_near"
