--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/base_bg"
+    android:background="@color/wight"
     android:orientation="vertical" >
 
     <include
@@ -11,16 +11,21 @@
 
     <com.example.lenovo.uu.view.ClearEditText
         android:id="@+id/et_msg_search"
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/base_action_bar_height"
-        android:layout_margin="10dp"
-        android:background="@drawable/base_edit_input"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="30.0dip"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="#f4f6f6"
         android:drawableLeft="@drawable/icon_msg_search"
         android:drawablePadding="10dp"
-        android:hint="@string/message_search_hint"
+        android:hint="搜索"
+        android:textSize="15.0dip"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:visibility="gone"
         android:maxLines="1"/>
 
     <com.example.lenovo.uu.widge.CircleRefreshLayout
