--- a/app/src/main/res/layout/activity_near_people.xml
+++ b/app/src/main/res/layout/activity_near_people.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:gravity="center_vertical"
         android:background="@color/wight"
-        android:layout_height="50dp">
+        android:layout_height="40dp">
 
         <LinearLayout
             android:layout_weight="1.0"
@@ -24,12 +24,12 @@
 
             <TextView
                 android:text="距离:"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
                 android:id="@+id/near_distance"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:text="10"
                 android:inputType="numberDecimal"
                 android:maxLines="1"
@@ -41,7 +41,7 @@
         </LinearLayout>
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="2px"
             android:layout_gravity="center"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/near_line_uad_margin"
@@ -55,16 +55,10 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="性别:"
-                android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
                 android:id="@+id/near_gender"
-                android:textSize="18sp"
-                android:text="男◢"
+                android:textSize="16sp"
+                android:text="性别: 男◢"
                 android:maxLines="1"
-                android:layout_marginLeft="2dp"
                 android:background="#ffffff"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -72,7 +66,7 @@
         </LinearLayout>
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="2px"
             android:layout_gravity="center"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/near_line_uad_margin"
@@ -87,12 +81,12 @@
 
             <TextView
                 android:text="数量:"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
                 android:id="@+id/near_count"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:text="10"
                 android:inputType="number"
                 android:maxLines="1"
@@ -104,7 +98,7 @@
         </LinearLayout>
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="2px"
             android:layout_gravity="center"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/near_line_uad_margin"
@@ -120,7 +114,7 @@
             <TextView
                 android:id="@+id/near_include_friends"
                 android:text="包含好友◢"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:maxLines="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -130,7 +124,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.1dp"
+        android:layout_height="1px"
         android:background="@color/base_color_text_gray2" />
 
     <FrameLayout
@@ -145,7 +139,7 @@
             android:layout_height="match_parent"
             android:cacheColorHint="@android:color/transparent"
             android:divider="@drawable/base_horizontal_line"
-            android:dividerHeight="1dp"
+            android:dividerHeight="2px"
             android:fadingEdgeLength="0dp"
             android:fastScrollEnabled="true"
             android:paddingBottom="10dp"
